policies/hr-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hr-policy
  namespace: hr
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: hr
      ports:
      - port: 80
        protocol: TCP 

  policyTypes:
  - Ingress
